# chess-egt

./: AGENTS.md  Cargo.toml  README.md  agents.md
src/: egt.rs  egt_file.rs  error.rs  indexer.rs  lib.rs  piece_set.rs  retrograde.rs
src/egt/: indexer.rs
