[package]
name = "chess-egt"
version = "0.1.0"
edition = "2024"

[dependencies]
zeekstd = "0.6.2"
clap = { version = "4.4", features = ["derive"] }
shakmaty = { git = "https://github.com/gr-g/shakmaty.git", branch = "main" }
arrayvec = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"

[[bin]]
name = "chess-egt"
path = "src/bin/main.rs"
